<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".InputFragment" android:id="@+id/constraintLayout"
                                             android:visibility="visible">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:text="@string/message"
            android:layout_width="265dp"
            android:layout_height="67dp" android:id="@+id/message"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/input_height"
            app:layout_constraintVertical_bias="0.02"/>
    <TextView
            android:text="@string/height"
            android:layout_width="33dp"
            android:layout_height="22dp"
            android:id="@+id/height_label" android:gravity="center"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/message" android:layout_marginStart="28dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"/>
    <TextView
            android:text="@string/weight"
            android:layout_width="40dp"
            android:layout_height="22dp"
            android:id="@+id/weight_label" android:gravity="center"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/height_label" android:layout_marginStart="28dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/input_height" android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@+id/input_weight"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/input_weight" android:layout_marginTop="220dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/button"
            android:layout_width="277dp"
            android:layout_height="49dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/calculate_button" android:layout_marginTop="203dp"
            app:layout_constraintTop_toBottomOf="@+id/message" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
    />
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="390dp" android:id="@+id/guideline"
            android:visibility="visible" android:background="@drawable/simple_frame"/>
    <TextView
            android:layout_width="293dp"
            android:layout_height="33dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/result_message" android:layout_marginBottom="268dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/title_input"
            app:layout_constraintVertical_bias="0.971"/>
    <EditText
            android:layout_width="350dp"
            android:layout_height="87dp"
            android:inputType="textMultiLine"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/input_excuse" android:hint="@string/excuse"
            android:layout_marginBottom="152dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            android:visibility="invisible" android:singleLine="false" android:lines="20"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/input_excuse"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" android:layout_marginRight="64dp"
            android:visibility="invisible"/>
    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/input_excuse"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="56dp" android:layout_marginStart="56dp"
            android:visibility="invisible"/>
    <TextView
            android:text="@string/tab_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toTopOf="@+id/message"/>
</android.support.constraint.ConstraintLayout>